# shorty

./: .gitignore  Cargo.toml  MIT-LICENSE  README.md
configurations/: base.yaml
migrations/: 20260103064823_create_user_table.sql  20260103064847_create_urls_table.sql  20260108143534_add_site_name_column_to_urls.sql
public/: output.css
src/: configuration.rs  errors.rs  lib.rs  main.rs  startup.rs  telementry.rs
src/models/: url.rs  user.rs
src/routes/: auth.rs  dashboard.rs  mod.rs  url.rs
src/services/: auth.rs  url.rs
src/store/: mod.rs  url.rs  user.rs
templates/: base.html  dashboard.html  login.html  package-lock.json  package.json  profile.html  signup.html
templates/partials/: create_url.html  profile_popup.html  url.html
