[package]
name = "shorty"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
axum = "0.8.8"
axum-extra = {version = "0.12.5", features = ["typed-header", "cookie", "cookie-signed"]}
bb8 = "0.9.1"
chrono = {version = "0.4.42", features = ["serde"]}
config = "0.15.19"
jsonwebtoken = { version = "10.2.0", features = ["aws_lc_rs"] }
nanoid = "0.4.0"
redis = {version = "1.0.2", default-features = false, features = ["tokio-comp", "bb8"]}
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-aux = "4.7.0"
serde_json = "1.0.148"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "any", "postgres", "uuid", "time", "chrono"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.44"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
opentelemetry = { version = "0.27", features = ["trace"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic", "trace"] }
tracing-opentelemetry = "0.28"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "registry"] }
opentelemetry-semantic-conventions = "0.27"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
askama = { version = "0.15.1", features = ["full"] }
tower-http = {version = "0.6.8", features = ["fs"]}

[lib]
path = "src/lib.rs"

[[bin]]
name = "shorty"
path = "src/main.rs"
